<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="VerifyActivity"
            type="com.example.dmsport_android.ui.activity.VerifyActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_verify_title"
            style="@style/Theme.DMSportAndroid.LinearLayout"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22">

            <TextView
                android:id="@+id/tv_verify_verify"
                style="@style/TextView_Title"
                android:text="@string/verify_verify"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_verify_dmSport"
                style="@style/TextView_DMSport"
                app:layout_constraintStart_toStartOf="@id/tv_verify_verify"
                app:layout_constraintTop_toBottomOf="@id/tv_verify_verify" />

        </LinearLayout>

        <LinearLayout
            style="@style/Theme.DMSportAndroid.LinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ll_verify_title">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_verify_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <LinearLayout
                android:id="@+id/ll_verify_horizon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_verify_email"
                style="@style/TextInputLayout"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_verify_email"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:hint="@string/login_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_verify_verify"
                style="@style/Button_Primary"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:onClick="@{()->VerifyActivity.verifyButton()}"
                android:text="@string/verify_button" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_verify_email">

                <EditText
                    android:id="@+id/et_verify_code"
                    style="@style/EditText"
                    android:hint="@string/verify_code" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_marginHorizontal="16dp"
            android:id="@+id/bt_verify_next"
            style="@style/Button_Primary"
            android:layout_marginBottom="42dp"
            android:onClick="@{()->VerifyActivity.completeButton()}"
            android:text="@string/verify_complement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>