<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="358dp"
            android:layout_height="112dp"
            app:layout_constraintBottom_toBottomOf="parent "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextView_Hint20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/delete_notice" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_delete_notice_cancel"
                        style="@style/TextView_Hint20"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="12dp"
                        android:text="@string/create_notice_cancel" />

                    <Button
                        android:id="@+id/bt_delete_notice_complete"
                        style="@style/Button_Primary"
                        android:layout_width="74dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:text="@string/create_notice_complete" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

