<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="EmailChangePwActivity"
            type="com.example.dmsport_android.ui.activity.EmailChangePwActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_change_pw"
            style="@style/TextView_Title"
            android:layout_marginStart="24dp"
            android:layout_marginTop="224dp"
            android:text="@string/change_pw_text_ko"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_change_pw_password"
            style="@style/Theme.DMSportAndroid.TextView_Change_Password"
            app:layout_constraintStart_toStartOf="@id/tv_change_pw"
            app:layout_constraintTop_toBottomOf="@id/tv_change_pw" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_change_pw"
            style="@style/TextInputLayout"
            android:layout_marginTop="32dp"
            android:layout_width="358dp"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/color_highLight"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_pw_password">

            <EditText
                android:id="@+id/et_change_pw"
                style="@style/EditText"
                android:hint="@string/change_pw_edit_text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/img_change_visible_pw"
            style="@style/Toggle"
            android:onClick="@{()->EmailChangePwActivity.visible()}"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayout_change_pw"
            app:layout_constraintEnd_toEndOf="@id/textInputLayout_change_pw"
            app:layout_constraintTop_toTopOf="@id/textInputLayout_change_pw" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_change_pw_re"
            style="@style/TextInputLayout"
            android:layout_width="358dp"
            android:layout_marginTop="14dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_change_pw">

            <EditText
                android:id="@+id/et_change_pw_re"
                style="@style/EditText"
                android:hint="@string/change_pw_re" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/img_change_visible_pw_re"
            style="@style/Toggle"
            android:onClick="@{()->EmailChangePwActivity.visibleRe()}"
            app:layout_constraintBottom_toBottomOf="@id/textInputLayout_change_pw_re"
            app:layout_constraintEnd_toEndOf="@id/textInputLayout_change_pw_re"
            app:layout_constraintTop_toTopOf="@id/textInputLayout_change_pw_re" />

        <Button
            android:id="@+id/bt_change_pw_next"
            style="@style/Button_Primary"
            android:layout_marginBottom="42dp"
            android:text="@string/register_next"
            android:onClick="@{()->EmailChangePwActivity.nextButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>